<resources>
    <string name="app_title">Woofer</string>
    <string name="LoginMessage">Welcome to Woofer</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Woofer_welcome">Welcome to Woofer</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="Fill_prompt">Fill in the information below</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search_by_username">Search by Username</string>
    <string name="search_user">Search user</string>
    <string name="add_friends">Add friends</string>
    <string name="add_friend">Add friend</string>
    <string name="view_friends">View friends</string>
    <string name="suggested_users">Suggested users</string>
    <string name="friends_list">Friends List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dateposted">DatePosted</string>
    <string name="post_content">Post Content</string>
    <string name="add_user">Add User</string>
    <string name="create_post">Create post</string>
    <string name="write_your_message_here">Write your message here...</string>
    <string name="post_a_status">Post a status</string>
    <string name="post_status">Post Status</string>
    <string name="view_pending_requests">Pending requests</string>
    <string name="back">Back</string>
    <string name="pending_requests">Pending requests</string>
    <string name="decline">decline</string>
    <string name="accept">accept</string>
    <string name="refresh">Refresh</string>
    <string name="mutual_friends">Mutual friends</string>
    <string name="loading">Loading...</string>
</resources>